# scrabbulizer

./: CMakeLists.txt  Readme.MD  catch.h  explainword.cpp  main.cpp  robin_hood.h  scrabble.cpp  scrabble.h  test.cpp  topout.sh  trie.cpp  trie.h
test/: bestaddition1.txt
